--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -207,3 +207,16 @@ iframe {
 .footer-links a:not(:last-child) {
     border-right: 1px solid #FFFFFF;  
 }
+
+input[type="submit"] {
+    background-color: #00FF00; 
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px 20px; 
+    font-size: 16px;
+}
+
+input[type="submit"]:hover {
+    background-color: #32CD32; 
+}
